--- a/style.css
+++ b/style.css
@@ -2,6 +2,17 @@
 html { box-sizing: border-box; }
 *, :after, :before { box-sizing: inherit; }
 
+/* barvy */
+:root {
+	--svetla: #edf3f5;
+	--seda: #b2bec3;
+	--tmava: #636e72;
+	--oranzova: #ee5a24;
+	--cervena: #ea2027;
+	--zluta: #f79f1f;
+	--zelena: #a3cb38;
+	--limetka: #c4e538;
+}
 
 body {
 	margin: 0;
@@ -13,6 +24,7 @@ body {
 
 h1, h2, h3 {
 	font-family: 'Kaushan Script', cursive;
+	color: var(--zelena);
 	font-weight: normal;
 	margin: 0;
 }
@@ -66,3 +78,101 @@ blockquote {
 	- https://www.smashingmagazine.com/2017/04/start-using-css-custom-properties/
 */
 
+.blog {
+	display: grid;
+	grid-template-columns: 1fr 4fr 2fr;
+	column-gap:  40px;
+	max-width: 1100px;
+	margin: auto;
+}
+
+
+p,
+header,
+footer,
+h1,
+h2 {
+	grid-column: 2 ;
+	justify-items: left;
+	margin-top: 0;
+}
+
+.meta {
+	color: var(--seda);
+	margin-top: 20px;
+}
+
+figure,
+blockquote {
+	grid-column: 1 / -1;
+	text-align: center;
+	color: var(--seda);
+}
+
+blockquote::before {
+	content:" ";
+	display: block;
+	border: 1px solid var(--limetka);
+  width: 60px;
+  margin: 0 auto 20px auto;
+}
+
+blockquote::after {
+	content:" ";
+	display: block;
+	border: 1px solid var(--limetka);
+  width: 60px;
+  margin: 20px auto 0 auto;
+}
+
+footer,
+footer a {
+	color: var(--seda);
+}
+
+figure {
+	margin: 30px 0;
+}
+
+
+.tip {
+	background-color: var(--svetla);
+	align-self: start;
+	justify-self: start;
+	padding: 20px;
+	font-size: 15px;
+}
+
+.tip p {
+	margin: 0;
+}
+
+img {
+	width: 100%;
+}
+
+figcaption {
+	text-align: left;
+}
+
+.tip-vlevo {
+	grid-column: 1 / 2;
+	text-align: right;
+	border-right: 2px solid var(--oranzova);
+}
+
+.tip-vpravo {
+	grid-column: -1 / -2;
+	text-align: left;
+	border-left: 2px solid var(--oranzova);
+}
+
+
+h1 {
+	font-size: 70px;
+}
+
+h2,
+blockquote {
+	font-size: 28px;
+}
